Bug 120216 - Table make Impress slow and dump
Summary: Table make Impress slow and dump
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
6.1.2.1 release
Hardware: x86-64 (AMD64) Windows (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.0.0
Keywords: haveBacktrace, perf
Depends on:
Blocks: ImpressDraw-Tables
  Show dependency treegraph
 
Reported: 2018-09-30 15:57 UTC by Massimo
Modified: 2020-06-08 19:35 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
Table (32.11 KB, application/vnd.oasis.opendocument.presentation)
2018-09-30 15:58 UTC, Massimo
Details
WinDBG dump from procdump with LO 6.4+ (11.01 KB, text/plain)
2019-10-16 10:33 UTC, Timur
Details
Backtrace from Linux LO 6.4+ (9.34 KB, text/plain)
2019-10-16 10:45 UTC, Timur
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Massimo 2018-09-30 15:57:36 UTC
Description:
Table handling in Impress has always been a nightmare but it has now become simply  unbearable. I attach an example. Try to play with the table: select row or column, try to change the width, to optimize the character positions... Impress stops responding.
LO 6.1.2.1 64bit under Win10 fully updated.

Steps to Reproduce:
Just try to modify the table

Actual Results:
Impress stops responding or becomes extremely slow

Expected Results:
Handle tables correctly.


Reproducible: Always


User Profile Reset: No



Additional Info:
OpenGL disabled. No difference if I enable it. Checked on four different computers.
Comment 1 Massimo 2018-09-30 15:58:47 UTC
Created attachment 145277 [details]
Table

An example of table making Impress hang to become extremely slow.
Comment 2 Massimo 2018-09-30 15:59:09 UTC
Version: 6.1.2.1 (x64)
Build ID: 65905a128db06ba48db947242809d14d3f9a93fe
CPU threads: 4; OS: Windows 10.0; UI render: GL; 
Locale: en-GB (en_GB); Calc: CL
Comment 3 Telesto 2018-10-02 18:38:43 UTC
Repro with
Version: 6.2.0.0.alpha0+
Build ID: 52cb73911e661fb636085337374e09845f07783b
CPU threads: 4; OS: Windows 6.3; UI render: default; 
TinderBox: Win-x86@42, Branch:master, Time: 2018-10-02_01:05:50
Locale: nl-NL (nl_NL); Calc: CL

but not with
Versie: 4.4.7.2 
Build ID: f3153a8b245191196a4b6b9abd1d0da16eead600
Locale: nl_NL

Probably already reported, somewhere
Comment 4 raal 2018-10-26 12:52:12 UTC
I cannot confirm with Version: 6.2.0.0.alpha0+
Build ID: 425af6845ebe066c950b0b63f50563e067485f3e
CPU threads: 4; OS: Windows 6.1; UI render: default; VCL: win;
Comment 5 Telesto 2018-10-26 14:33:33 UTC
(In reply to raal from comment #4)
> I cannot confirm with Version: 6.2.0.0.alpha0+
> Build ID: 425af6845ebe066c950b0b63f50563e067485f3e
> CPU threads: 4; OS: Windows 6.1; UI render: default; VCL: win;

I don't reproduce a "not responding"; however I do notice bad performance

Steps to reproduce
1. Open the attached file
2. Place the cursor in A1`
4. Hold arrow left (and monitor CPU usage)

Also observing blinking text
1. Place the cursor in the textbox containing: 4, 4, 422, 42m, 4/m, 4mm, 4/mmm
2. Left click to the right below AP (text is disappearing for a second & high CPU usage
Comment 6 Timur 2019-10-16 10:33:09 UTC
Created attachment 155035 [details]
WinDBG dump from procdump with LO 6.4+
Comment 7 Timur 2019-10-16 10:45:48 UTC
Created attachment 155036 [details]
Backtrace from Linux LO 6.4+
Comment 8 Commit Notification 2020-03-06 19:41:22 UTC
Mark Hung committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/32c8bd660e74169a17fdfd4cdbf42bb79dc5a10d

tdf#120216 improve svx table performance.

It will be available in 7.0.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Roman Kuznetsov 2020-03-09 14:09:58 UTC
Mark, is this bug fixed after your patch? If yes, then please change it status, thanks.
Comment 10 Timur 2020-03-10 09:27:39 UTC
I still have dump on fileopen in 7.0+ (with procdump in Windows). 
But I don't confirm "Impress stops responding", it's just up to 15% CPU.
So Massimo and Telesto need to test again, best with LO master.
Comment 11 Massimo 2020-03-10 09:41:32 UTC
Just tested again with 6.4.1.2. LO doesn't stop responding but the handling of this table is extremely painful. Try to resize the width of a column, you will see...

Version: 6.4.1.2 (x64)
Build ID: 4d224e95b98b138af42a64d84056446d09082932
CPU threads: 4; OS: Windows 10.0 Build 18363; UI render: default; VCL: win; 
Locale: ja-JP (ja_JP); UI-Language: en-GB
Calc: CL
Comment 12 Mark Hung 2020-03-10 13:07:12 UTC
What I really did is to make entering editing mode faster. ( I measure time between clicking a cell and cursor starting to blink. )  If that didn't help or it's not the original issue then it does need more fix.
Comment 13 Roman Kuznetsov 2020-03-11 11:25:13 UTC Comment hidden (obsolete)
Comment 14 Massimo 2020-03-11 15:16:57 UTC
(In reply to Roman Kuznetsov from comment #13)
> 
> Massimo, it was fix only in current master (future 7.0), can you test the
> problem in it?

Apologies for my ignorance, but can I install 7.0 alpha (?), for testing, on my job-dedicated PC while keeping 6.4.1.2 for my work? Do I need to use a different machine? I'm a bit scared of getting something screwed up... Thank you for your understanding.
Comment 15 Timur 2020-03-11 15:35:00 UTC
Yes, get Windows from https://dev-builds.libreoffice.org/daily/master/current.html, it's a separate installation that doesn't register extensions and can be removed. 
It can even be unpacked with SI-GUI, but it would take time to set up.
Comment 16 Massimo 2020-04-04 15:35:21 UTC
(In reply to Timur from comment #15)
> Yes, get Windows from
> https://dev-builds.libreoffice.org/daily/master/current.html, it's a
> separate installation that doesn't register extensions and can be removed. 
> It can even be unpacked with SI-GUI, but it would take time to set up.

Sorry for the late reply, a lot happened since your message, as you know. Anyway, I have installed 7.0 alpha and tried the test table with this version. I can confirm that the situation is definitely improved. I can edit the column width without Impress hanging or getting too slow.
I look forward to the release of this version!
Comment 17 Buovjaga 2020-06-08 19:35:14 UTC
Let's set to fixed per Mark's fix. Thanks!